--- a/pages/Artículos.html
+++ b/pages/Artículos.html
@@ -209,7 +209,7 @@
        
         
         <div id="endShop">
-            <button class="finCompra btn-primary btn-lg" >Finalizar compra</button>
+            <button class="limpiarcarrito btn-primary btn-lg" >limpiar carrito</button>
         </div>
 
         <div class="prefooter">
